06-06  update